--- a/BoxAndroidLibrarySample/res/values/strings.xml
+++ b/BoxAndroidLibrarySample/res/values/strings.xml
@@ -17,6 +17,22 @@
    ******************************************************************************/
 -->
 <resources>
-    <string name="checking_login_status">Checking login status...</string>
+    
     <string name="app_name">Box Android Library Sample</string>
+    <string name="checking_login_status">Checking login status…</string>
+    <string name="loading_file_details">Loading file details…</string>
+    <string name="loading_comments">Loading comments…</string>
+    <string name="loading">Loading…</string>
+    <string name="view_user_info">View User Info</string>
+    <string name="browse">Browse</string>
+    <string name="log_out">Log Out</string>
+    <string name="share">Share</string>
+    <string name="email_addresses_comma_separated">E-mail addresses (comma separated):</string>
+    <string name="message">Message:</string>
+    <string name="shared_from_sample_box_android_library_app">Shared from sample Box Android library app</string>
+    <string name="cancel">Cancel</string>
+    <string name="sample_app">Sample App</string>
+    <string name="continuex">Continue</string>
+    <string name="log_in">Log in</string>
+    
 </resources>
