Added Loading ProgressDialog on BoxAuthentication.

--- a/BoxAndroidLibrary/res/values/strings.xml
+++ b/BoxAndroidLibrary/res/values/strings.xml
@@ -17,4 +17,7 @@
    ******************************************************************************/
 -->
 <resources>
+
+    <string name="com_box_androidlib_activities_loading">Loading&#8230;</string>
+
 </resources>
